example/lib/src/generated/errors/errors_localization_ml.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Malayalam (`ml`).
class ErrorsLocalizationMl extends ErrorsLocalization {
  ErrorsLocalizationMl([String locale = 'ml']) : super(locale);

  @override
  String get error => 'ഒരു പിശക് സംഭവിച്ചു';

  @override
  String get unexpectedError => 'അപ്രതീക്ഷിതമായ ഒരു പിശക് സംഭവിച്ചു';

  @override
  String get bugReportSentText => 'ബഗ് റിപ്പോർട്ട് വിജയകരമായി അയച്ചു.';
}
